# VidReelic

./: .env  README.md  checklist.md  daemon.py  pyproject.toml  run_video_pilot.sh  short.video.main.py  update.py  vidVoyant.py
GUI/: vshort.ui.py
GUI/components/: genration_mode.py  sidebar_component.py  social_media_component.py  topic_component.py  voice_component.py
config/: icon.py
database/posts/: post.layout.py
database/template/: post.context.template.gql
database/template/history/: history.data.py
database/template/voice/: voice.train.py
environments/: api.integration.py  aspect.ratio.py  editor.py  memory.py  schedule.py  select.language.py  select.topic.py  video.length.py  voice.integration.py
environments/editors/: capcut.py  photopea.py
include/: ffmpeg.py
workspace/: auto.post.py  workspace.md
